DPRO-1125: fix warning icon stack so exclamation point is aligned

--- a/src/main/webapp/WEB-INF/themes/desktop/sass/search-results.scss
+++ b/src/main/webapp/WEB-INF/themes/desktop/sass/search-results.scss
@@ -466,6 +466,11 @@ $pagination-height: 24px;
   }
 
 .icon-warning-stack {
+
+  .icon-warning, .fa-exclamation {
+    @extend .list-icon;
+  }
+
   .icon-warning {
     color: $alert;
     }
